<resources>
    <string name="app_name">Aoikuma: NihongoCards</string>

    <!-- Main Activity Layout -->
    <string name="game_link">Start Game</string>
    <string name="settings_link">Settings</string>

    <!-- Settings Layout -->
    <string name="settings_title">Settings</string>
    <string name="volume_label">Music Volume</string>
    <string name="include_hiragana">Hiragana</string>
    <string name="include_katakana">Katakana</string>
    <string name="version">Version:</string>
    <string name="select_at_least_one_alphabet">Please select at least one alphabet option before exiting.</string>

    <!-- Settings Activity -->
    <string name="volume_value_format">%d%%</string>

    <!-- Game Activity -->
    <string name="end_game">End of Game</string>
    <string name="retry">Do you want to play again?</string>
    <string name="dialog_no">No</string>
    <string name="dialog_yes">Yes</string>
    <string name="card_progress">%1$d/%2$d</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>