<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.NihongoCards.FullscreenContainer"
    tools:context=".fragments.MainFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:fontFamily="@font/cyber_way_riders"
        android:text="@string/app_name"
        android:textColor="@color/dark_blue"
        android:textSize="28sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/game_link"
        android:textSize="24sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/startButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/settings_link"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</RelativeLayout>